second commit with modyfied html and js

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Число 1:<input type="text" id="n1"></p>
-    <p>Число 2:<input type="text" id="n2"></p>
+    <p><input type="text" id="n1" placeholder="Число 1" required></p>
+    <p><input type="text" id="n2" placeholder="Число 2" required></p>
     <button onclick="plus()">+</button>
     <button onclick="minus()">-</button>
     <button onclick="multiply()">*</button>
